# buildlog

./: .cursorignore  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: session-capture.sh  session-resume.sh
.cursor/rules/: buildlog-continuity.mdc
.github/workflows/: ci.yml  publish.yml
buildlog/: __init__.py  __main__.py  cli.py  entries.py  git_context.py  storage.py
tests/: test_cli.py  test_entries.py  test_git_context.py  test_packaging.py  test_storage.py
